5th_week_mission/src/sign.css
@import "./global.css";

body {
  padding-top: 23.8rem;
  background-color: var(--background);
  display: flex;
  flex-direction: column;
  align-items: center;
  row-gap: 3rem;
}

header {
  display: flex;
  flex-direction: column;
  row-gap: 1.6rem;
}

.logo-link {
  display: flex;
  justify-content: center;
}

.header-logo {
  height: 3.8rem;
}

.header-message {
  display: flex;
  column-gap: 0.8rem;
  font-size: 1.6rem;
  font-weight: 400;
  line-height: 150%;
}

.header-link {
  height: fit-content;
  font-size: 1.6rem;
  font-weight: 600;
  line-height: normal;
  color: var(--primary);
  border-bottom: 0.1rem solid var(--primary);
}

.sign-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  row-gap: 3.2rem;
  width: 40rem;
}

.sign-form {
  display: flex;
  flex-direction: column;
  row-gap: 3rem;
  width: 100%;
}

.sign-inputs {
  display: flex;
  flex-direction: column;
  row-gap: 2.4rem;
}

.sign-input-box {
  display: flex;
  flex-direction: column;
  row-gap: 1.2rem;
}

.sign-password {
  position: relative;
}

.sign-input-label {
  font-size: 1.4rem;
  font-weight: 400;
}

.sign-input {
  padding: 1.8rem 1.5rem;
  border-radius: 0.8rem;
  border: 0.1rem solid var(--gray20);
  font-size: 1.6rem;
  line-height: 150%;
}

.sign-input:focus {
  border-color: var(--primary);
}

.pwdErrorLine,
.emailErrorLine,
.pwdCheckErrorLine {
  border-color: var(--red);
}

.eye-button {
  position: absolute;
  bottom: 2.2rem;
  right: 1.5rem;
  width: 1.6rem;
  height: 1.6rem;
  top: 50%;
  background-image: url('../images/eye-on.svg');
}

.eye-button-off {
  background-image: url('../images/eye-off.svg');
}

.cta {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 5.4rem;
  background-image: linear-gradient(135deg, var(--primary) 0%, #6ae3fe 100%);
  border-radius: 0.8rem;
  color: #f5f5f5;
  font-size: 1.8rem;
  font-weight: 600;
}

.sns-box {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  padding: 1.2rem 2.4rem;
  border-radius: 0.8rem;
  border: 0.1rem solid var(--gray20);
  background-color: var(--gray10);
}

.sns-links {
  display: flex;
  column-gap: 1.6rem;
}

.sns-link {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 4.2rem;
  height: 4.2rem;
  border-radius: 50%;
}

.sns-text {
  font-size: 1.4rem;
  font-weight: 400;
  color: var(--gray100);
}

.google-link {
  background-color: var(--white);
  border: 0.1rem solid #d3d4dd;
}

.kakao-link {
  padding-top: 0.2rem;
  background-color: #f5e14b;
}

.error_msg {
  color: var(--red);
  font-size: 14px;
}

/*모바일 환경*/

@media (min-width: 375px) and (max-width: 767px) { 
  .sign-box {
    width: 100%;
    max-width: 40rem;
    margin-left: 3.2rem;
    margin-right: 3.2rem;
  }
  .sign-form {
    width: 100%;
    max-width: 40rem;
  }

  .sign-inputs {
    width: 100%;
    max-width: 40rem;
  }

  .sign-input-box {
    display: flex;
    flex-direction: column;
    row-gap: 1.2rem;
}
  .cta {
    max-width: 40rem;
  }
  .sns-box {
    max-width: 40rem;
  }
}

